concord_macros/tests/dsl/fail/fail_duplicate_behavior_same_site_scope.stderr
error: duplicate behavior `read` at this attachment site
  --> tests/dsl/fail/fail_duplicate_behavior_same_site_scope.rs:15:18
   |
15 |         behavior read
   |                  ^^^^
